Update Login Page dark and light thme

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -6,6 +6,8 @@
 }
 
 .dark {
+    --primary: #328cf1;
+    --green: #40c225;
     --background: #18191a;
     --secondary-background: #212121;
     --third-background: #3a3b3c;
