--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -2,6 +2,7 @@
     --background: #f0f2f5;
     --secondary-background: #fff;
     --primary: #0571ed;
+    --primary-lite: rgba(5, 113, 237, 0.349);
     --green: #34a61d;
 }
 
