--- a/src/assets/styles/scrollbar.scss
+++ b/src/assets/styles/scrollbar.scss
@@ -1,27 +1,73 @@
+// for chromes scrollbar
 *::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background-color: var(--light-background);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    // border-radius: 10px;
+    // background-color: var(--lightestPrimary);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
 }
 *::-webkit-scrollbar {
-    width: 10px;
-    height: 2px;
-    // background-color: var(--light-background);
+    width: 5px;
+    height: 5px;
 }
 
 *::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0);
     border-radius: 10px;
-    background-color: var(--primary);
+    margin: 10px;
+    opacity: 0.5;
+
+    &:hover {
+        background-color: var(--primary);
+    }
 }
-::-webkit-scrollbar-corner {
-    // background: var(--light-background);
+
+.dark *::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 10px;
+    margin: 10px;
 }
+
 * {
     scrollbar-width: thin;
-    scrollbar-color: var(--light-background) #cccccc;
+    scroll-behavior: smooth;
 }
 
 .s-loading {
     margin-bottom: 10px;
+}
+
+.overflowing-div {
+    &:hover {
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--primary);
+            opacity: 1;
+
+            &:hover {
+                background-color: var(--primary);
+            }
+        }
+    }
+}
+
+.scroll-bar-md,
+.scroll-bar-sm {
+    &::-webkit-scrollbar-thumb {
+        border-radius: 5px;
+        margin: 10px;
+    }
+}
+
+.scroll-bar-sm {
+    &::-webkit-scrollbar {
+        width: 10px !important;
+        height: 10px !important;
+    }
+}
+
+.scroll-bar-md {
+    &::-webkit-scrollbar {
+        width: 20px !important;
+        height: 20px !important;
+    }
 }
