Update Side and left responsiveness

--- a/src/assets/styles/scrollbar.scss
+++ b/src/assets/styles/scrollbar.scss
@@ -38,7 +38,8 @@
 }
 
 .overflowing-div {
-    &:hover {
+    &:hover,
+    &:active {
         &::-webkit-scrollbar-thumb {
             background-color: var(--primary);
             opacity: 1;
