set stories view in timeline

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,6 +1,7 @@
 @import "./styles/root.scss";
 @import "./styles/colors.scss";
 @import "./styles/scrollbar.scss";
+@import "./styles/shadow.scss";
 
 html {
     font-family: Arial, Helvetica, sans-serif;
